Fix alignment with grid

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 
 .container {
     text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
 }
 
 .container div {
@@ -17,16 +19,43 @@
 
 .header {
     background-color: #393f4d;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.logo {
+    justify-self: start;
+}
+
+.menu {
+    align-self: center;
+}
+
+.menu ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
 .menu li {
     font-size: 16px;
+    list-style-type: none;
 }
 
 .sidebar {
     background-color: #c50208;
+    grid-row: 2 / 4;
+    display: grid;
+    gap: 50px;
 }
+
+.side-content,
+.photo {
+    display: grid;
+    align-items: center;
+}
+
 
 .sidebar .photo {
     background-color: white;
@@ -50,6 +79,7 @@
 .nav ul li {
     font-size: 16px;
     text-transform: uppercase;
+    list-style-type: none;
 }
 
 .article {
@@ -82,6 +112,7 @@
 
 .footer {
     background-color: #393f4d;
+    grid-column: 1 / 3;
 }
 
 .footer p {
